--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 // Place your settings in this file to overwrite default and user settings.
 {
     "typescript.tsdk": "./node_modules/typescript/lib",
-    "tslint.enable": false,
-    "vsicons.presets.angular": false // we want to use the TS server from our node_modules folder to control its version
+    "vsicons.presets.angular": false, // we want to use the TS server from our node_modules folder to control its version,
+    "xo.enable": true,
+    "xo.options": {
+        "semicolon": true
+    },
+    "tslint.enable": false
 }
