--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,7 @@
     "xo.options": {
         "semicolon": true
     },
-    "tslint.enable": false
+    "tslint.enable": false,
+    "eslint.enable": true,
+    "standard.enable": false
 }
